--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
             { description: "Esta reação envolve a adição de um grupo nitro a um composto aromático.", name: "Nitração aromática" },
             { description: "Esta reação envolve a substituição de um grupo hidroxila por um grupo cloro.", name: "Cloração de álcoois" },
             { description: "Esta reação envolve a formação de um aldeído a partir de um álcool primário.", name: "Oxidação de álcoois" },
+             // Reações existentes...
+            { description: "Esta reação orgânica envolve a adição de um átomo de hidrogênio a uma ligação dupla ou tripla.", name: "Reação de Adição" },
+            { description: "Esta reação orgânica envolve a remoção de um grupo de um composto orgânico, geralmente formando uma ligação dupla ou tripla.", name: "Reação de Eliminação" },
+            { description: "Esta reação orgânica envolve a substituição de um átomo ou grupo de átomos por outro átomo ou grupo de átomos.", name: "Reação de Substituição" },
+            { description: "Esta reação orgânica envolve a quebra de uma molécula em duas ou mais moléculas menores.", name: "Reação de Cisão" },
+            { description: "Esta reação orgânica envolve a combinação de duas ou mais moléculas para formar uma molécula maior.", name: "Reação de Combinação" },
             // Adicione mais reações aqui
         ];
         var currentReactions;
